--- a/foo/bar/index.html
+++ b/foo/bar/index.html
@@ -5,6 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="../somefile.html"></a>
+    <a href="../somefile.html">somefile</a>
 </body>
 </html>
