Update trailing slash example

--- a/foo/index.html
+++ b/foo/index.html
@@ -5,6 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="../somefile.html">somefile</a>
+    <a href="bar.html">relative link to bar.html</a>
 </body>
 </html>
